css/styles.css
:root {
    /* primary text */
    --black: #2E2E2E;
    /* secondary text, borders or not primary icons */
    --gray: #D3CFCF;
    /* background */
    --terracotta-white: #FAF9F6;
    --white: #fff;
    /* accent color */
    --terracotta: #E07A5F;

    --font-size: 1.5rem;
    --nunito: "Nunito", Arial, sans-serif;
}
html {
    box-sizing: border-box;

    margin: 0;
    padding: 0;
}
*,
*::before,
*::after {
    box-sizing: inherit;

    margin: 0;
    padding: 0;
}
.wrapper {
    /*border: 2px solid yellowgreen;*/

    height: 100vh;

    padding: 1.5rem 0 1rem 5rem;

    display: flex;
    flex-flow: row nowrap;

    background-color: var(--terracotta-white);
    color: var(--black);

    font-family: var(--nunito), sans-serif;
}

/* ----- navigation ----- */
.icon-menu {
    width: 2rem;
    height: 2rem;

    fill: var(--black);
}
/* Button styling */
.menu-toggle {
    display: inline-block;
    padding: .75em 15px;
    line-height: 1em;
    font-size: 1em;
}
/* Offscreen menu style */
.main-menu {
    position: absolute;
    display: none;
    left: -250px;
    height: 100%;

    transition: left 0.3s ease;
    z-index: 999;

    margin: 0;
    padding: 1.5rem 0 1rem 5rem;
    background-color: var(--terracotta-white);
}
.main-menu ul {
    min-height: 100%;
    width: 250px;

    list-style-type: none;

    margin-top: 5rem;
}
.main-menu a {
    text-decoration: none;

    color: var(--black);
    font-family: var(--nunito), sans-serif;
    font-size: var(--font-size);
    line-height: 1rem;

    display: flex;
    gap: 1rem;

    padding: 1rem 1.5rem;
}
.main-menu a:hover,
.main-menu a:focus {
    /* TODO create background color from terracotta-white but darker */
    background: var(--gray);
}
.main-menu a span {
    align-self: center;
}
.main-menu .menu-close {
    position: absolute;
    top: 0;
}
nav img {
    height: 1.5rem;
    width: 1.5rem;

    align-self: center;
}
nav li {
    font-size: var(--font-size);
}
aside {
    padding-left: 20px;
    display: flex;
    align-items: baseline;
}

/* Toggle main-menu */
.main-menu:target {
    left: 0;
    outline: none;

    display: block;
}

.main-menu:target .menu-close {
    z-index: 1001;
}

.main-menu:target ul {
    /*position: relative;*/
    z-index: 1000;
}

.main-menu:target + .backdrop {
    position: absolute;
    display: block;
    left: 0;
    top: 0;
    width: 100%;
    height: 100%;
    z-index: 998;
    cursor: default;
}

@supports (position: fixed) {
    .main-menu,
    .main-menu:target + .backdrop {
        position: fixed;
    }
}

/* Screen reader only */
.sr-only {
    position: absolute;
    width: 1px;
    height: 1px;
    padding: 0;
    margin: -1px;
    overflow: hidden;
    clip: rect(0,0,0,0);
    border: 0;
}


/* ----- entry page ----- */
.page-container {
    /*border: 1px solid green;*/
    max-width: 800px;

    margin-left: auto;

    padding: 2rem;

    display: flex;
    flex-direction: column;

    background-color: var(--white);

    font-family: var(--nunito), sans-serif;
    line-height: 1.5rem;

    /* to create child divs (new-pages) that overlap parent */
    overflow: auto;
    position: relative;
}
.page-container p,
.page-container div {
    margin: 0;
    padding: 0;
}
.page-container header {
    display: flex;
    flex-flow: row nowrap;

    margin-bottom: 2rem;
}
.title-container {
    /*border: 1px solid green;*/
}
.page-container header .entry-title {
    /*border: 2px solid red;*/

    width: 100%;

    font-family: var(--nunito), sans-serif;
    font-weight: 400;
    font-size: 1.5rem;

    margin: 0;
    padding: 0;
}
.icon-summary {
    width: 2.5rem;
    height: 2.5rem;

    fill: var(--gray);

    visibility: hidden;
}
/* first page body (shortened because of heading and date) */
.page-0 {
    border: 1px solid green;

    font-family: var(--nunito), sans-serif;
    /*font-size: var(--font-size);*/
    font-size: 1.2rem;
    font-weight: 300;
    line-height: 1.5rem;

    flex-basis: 97%;
}

.icon-save {
    /*border: 2px solid blue;*/
    width: 3rem;
    height: 3rem;

    fill: var(--terracotta);

    align-self: flex-end;
    margin-right: auto;
}

/* ------ new page ------ */
.blank-page {
    padding: 2rem !important;

    border: 1px solid green;

    background-color: var(--white);
    z-index: 1;

    position: absolute;

    top: 0;
    left: 0;

    height: 100%;
    width: 100%;

    font-family: var(--nunito), sans-serif;
    font-size: 1.2rem;
    font-weight: 300;
    line-height: 1.5rem;
}

